Start semester organization page

--- a/styles.less
+++ b/styles.less
@@ -7,7 +7,6 @@
 .top-row.minimized .text-col {
   .transition-duration(1s);
   margin: 5px 0px;
-  height: 3em;
 }
 
 .click-card {
@@ -17,3 +16,7 @@
 .preloader-wrapper {
   margin-top: 10px;
 }
+
+.padded-container { 
+  padding-bottom: 55px; 
+}  
