Welcome top notification

--- a/styles.less
+++ b/styles.less
@@ -1,5 +1,19 @@
 @import "less/elements.less";
 
-nav {
-	margin-bottom: 10px;
+.top-row .text-col {
+  overflow: hidden;
+  margin: 6em 0em 7em 0em;
+}
+.top-row.minimized .text-col {
+  .transition-duration(1s);
+  margin: 5px 0px;
+  height: 3em;
+}
+
+.click-card {
+  cursor: pointer;
+}
+
+.preloader-wrapper {
+  margin-top: 10px;
 }
