--- a/app/components/coursepopup.component.css
+++ b/app/components/coursepopup.component.css
@@ -1,12 +1,19 @@
-.modal.open {
+.modal {
   z-index: 1003; 
   display: block; 
   opacity: 1; 
-  transform: scaleX(1); 
-  top: 10%;
+  bottom: -400px;
+  
+  -webkit-transition-duration: 300ms; /* Safari */
+  -moz-transition-duration: 300ms; /* Safari */
+  -o-transition-duration: 300ms; /* Safari */
+  transition-duration: 300ms;
+}
+.modal.open {  
+  transform: translateY(-400px);
 }
 
-.modal-overlay.open {
+.modal-overlay {
   z-index: 1002;
   position: fixed;
   top: 0;
@@ -14,5 +21,12 @@
   width: 100%;
   height: 100%;
   display: block;
+  
+  -webkit-transition: background-color 300ms ease;
+  -moz-transition: background-color 300ms ease;
+  -o-transition: background-color 300ms ease;
+  transition: background-color 300ms ease;
+}
+.modal-overlay.open {
   background: rgba(0,0,0,0.5);
 }
