Start searchbar functionality

--- a/styles.less
+++ b/styles.less
@@ -19,4 +19,10 @@
 
 .padded-container { 
   padding-bottom: 55px; 
-}  
+}
+
+.dropdown-content.active {  
+  display: block;
+  width: 100%;
+  opacity: 1;
+}
