Keep track of semesters in user service

--- a/styles.less
+++ b/styles.less
@@ -9,8 +9,9 @@
   margin: 5px 0px;
 }
 
-.click-card {
+.click-card .card-content {
   cursor: pointer;
+  min-height: 133px;
 }
 
 .preloader-wrapper {
